--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                     <div
                       class="popular-tools-grid-items-buttons-group-row__visit universal-transparent-button"
                     >
-                      <a href="#">Visit</a>
+                      <a href="https://code.visualstudio.com/">Visit</a>
                     </div>
                   </div>
                 </div>
@@ -506,7 +506,7 @@
                     <div
                       class="popular-tools-grid-items-buttons-group-row__visit universal-transparent-button"
                     >
-                      <a target="_blank" href="https://code.visualstudio.com/">Visit</a>
+                      <a target="_blank" href="https://www.notion.so/">Visit</a>
                     </div>
                   </div>
                 </div>
@@ -1227,9 +1227,9 @@
                   <h6>Contact Us</h6>
                 </div>
                 <ul class="footer-row-item__list">
-                  <li><a href="#">+621987463</a></li>
+                  <li><a href="tel:+621987463">+621987463</a></li>
                   <li><a href="#">M Building, No.10 A</a></li>
-                  <li><a href="#">antools@awesome.com</a></li>
+                  <li><a href="mailto: antools@awesome.com">antools@awesome.com</a></li>
                 </ul>
               </div>
               <div class="footer-row__item">
