fixed slider and styles on buttons of social media

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         <div class="header__container">
           <div class="header__body">
             <div class="header__row">
-              <div class="header-row__logo header-logo-row universal-logo">
+              <a href="#" class="header-row__logo header-logo-row universal-logo">
                 <img
                   class="header-logo-row__logo"
                   src="img/main-page/header/Logo.svg"
                   alt="logo-icon"
                 />
                 <p class="header-logo-row__company-name">antools.</p>
-              </div>
+              </a>
               <div class="header-row__burger-icon"><span></span></div>
               <nav class="header-row__nav header-nav-row">
                 <ul class="header-nav-row__list">
@@ -137,13 +137,13 @@
                     </form>
                   </div>
                   <div class="tools-for-designer-developer-row-items__social-media">
-                    <a href="https://ru-ru.facebook.com/"
+                    <a class="social-media__facebook" href="https://ru-ru.facebook.com/"
                       ><img src="img/social-media-icons/facebook.svg" alt="facebook"
                     /></a>
-                    <a href="https://www.instagram.com/"
+                    <a class="social-media__instagram" href="https://www.instagram.com/"
                       ><img src="img/social-media-icons/instagramm.svg" alt="instagram"
                     /></a>
-                    <a href="https://twitter.com/"
+                    <a class="social-media__twitter" href="https://twitter.com/"
                       ><img src="img/social-media-icons/twitter.svg" alt="twitter"
                     /></a>
                   </div>
@@ -1720,10 +1720,10 @@
           <div class="footer__body">
             <div class="footer__row">
               <div class="footer-row__copyright">
-                <div class="footer-row-copyright__logo universal-logo">
-                  <img src="img/main-page/header/Logo.svg" alt="logo" />
-                  <p>antools.</p>
-                </div>
+                <a href="#" class="footer-row-copyright__logo universal-logo">
+                  <img src="img/main-page/footer/Logo.svg" alt="logo" />
+                  <p>antools.</p></a
+                >
                 <div class="footer-row-copyright__main-text">
                   <h6>Copyright 2022. Antools</h6>
                 </div>
